@@ -50,7 +50,8 @@
         </item>
         <item>
             <key> <string>_body</string> </key>
-            <value> <string>Base_translateString = context.Base_translateString\n
+            <value> <string>portal = context.getPortalObject()\n
+Base_translateString = context.Base_translateString\n
 item_list = [(\'\', \'\')]\n
 for action in context.portal_actions.listFilteredActionsFor(brain).get(\'workflow\', []):\n
   transition = action.get(\'transition\', None)\n
@@ -58,6 +59,9 @@ for action in context.portal_actions.listFilteredActionsFor(brain).get(\'workflo
     workflow_id = action[\'transition\'].aq_parent.aq_parent.getId()\n
     if workflow_id == brain.workflow_id:\n
       dialog_id = action[\'url\'].split(\'?\', 1)[0].split(\'/\')[-1]\n
+      dialog_object = getattr(portal, dialog_id, None)\n
+      if dialog_object is None or dialog_object.meta_type != \'ERP5 Form\':\n
+        dialog_id = portal.Base_viewWorkflowActionDialog.getId()\n
       item_list.append((Base_translateString(action[\'title\']),\n
                         \'%s/%s/%s\' % (workflow_id, action[\'id\'], dialog_id)))\n
 \n
